--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.0.0",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
+    "page": "^1.8.3",
     "pug": "^2.0.0-rc.4"
   },
   "devDependencies": {
